--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <h2 class="d-flex justify-content-center mt-4">Ofertas</h2>
       <div id="productos_ofertas" class="row ms-5"></div>
 
-
+      <div id="carrito"></div>
 
   </main>
 
