--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
           </ul>
           <form class="d-flex">
-            <input class="form-control me-2 rounded-pill ps-3 pe-5 " type="search" placeholder="Que estas buscando?"
-              aria-label="Search">
+            <!-- <input class="form-control me-2 rounded-pill ps-3 pe-5 " type="search" placeholder="Que estas buscando?"
+              aria-label="Search"> -->
             <!-- <button class="btn pe-5" type="submit"><i class="fas fa-search" style="color:rgb(0, 0, 0)"></i></button> -->
           </form>
         </div>
@@ -111,11 +111,9 @@
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
   crossorigin="anonymous"></script>
-  <script src="js/productos.js"></script>
+  <!-- <script src="js/productos.js"></script> -->
   <!-- <script src="productos_index.js"></script> -->
   <script src="js/script.js"></script>
-
-
 </body>
 
 </html>
